--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,61 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
 
+body {
+  background: #f2f2f2;
+  color: #333;
+  font-family: 'Nunito';
+}
 a {
-  color: inherit;
+  color: #333;
   text-decoration: none;
 }
+.mainContent {
+  width: 90%;
+  margin: 0 auto;
+}
+nav {
+  margin: 10px auto 80px;
+  padding: 10px 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  border-bottom: 1px solid #ddd;
+}
+nav a {
+  margin-left: 12px;
+}
+nav .logo {
+  margin-right: auto;
+}
+.flexBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.flexActive {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+footer {
+  color: rgb(0, 0, 0);
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: #eaeaea;
+}
+.not-found {
+  text-align: center;
+}
 
-* {
-  box-sizing: border-box;
+.not-found a {
+  color: #4979ff;
+  text-decoration: underline;
+}
+div.btnLink > a {
+  padding: 5px;
+  border: 1px solid #0d6efd;
+  border-radius: 10px;
 }
